<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ratedBreweries.initRatedBreweriesFragment"
    android:paddingHorizontal="16dp"
    >

    <TextView
        android:id="@+id/WelcomeRatedBreweries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/ratedText"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/warningText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:text="@string/warningBreweries"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeRatedBreweries"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputTextRated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:hint="@string/typeInput"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warningText" />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkRatedEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextRated"
        android:text="@string/emailSavedRated"
        android:fontFamily="@font/quicksand_bold"
        />
    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkRatedEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/SalveChecked"
        android:textColor="@color/black"
        android:fontFamily="@font/quicksand_bold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>