<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ratedBreweries.ResultRatedFragment">

    <TextView
        android:id="@+id/top_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/ratedText"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contains_result_opinion"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/resultRated"
        app:layout_constraintStart_toStartOf="@+id/top_title"
        app:layout_constraintTop_toBottomOf="@+id/top_title" />

    <TextView
        android:id="@+id/order_opinion"
        android:layout_width="112dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="Ordenar por: Nota"
        app:layout_constraintStart_toStartOf="@+id/contains_result_opinion"
        app:layout_constraintTop_toBottomOf="@+id/contains_result_opinion" />

    <ImageView
        android:id="@+id/filter_icon_opinion"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/top_title"
        app:layout_constraintTop_toTopOf="@+id/order_opinion"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        app:tint="#000000" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ratedRecyclerView"
        android:layout_width="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="6dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/top_title"
        app:layout_constraintStart_toStartOf="@id/order_opinion"
        app:layout_constraintTop_toBottomOf="@id/order_opinion"
        tools:listitem="@layout/card_opinion_horizontal" />
    <TextView
        android:id="@+id/titleEmptyRated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/emptyRatedBreweries"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/textEmptyRated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleEmptyRated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/textRatedEmpty"
        />
    <androidx.constraintlayout.widget.Group
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/containerResult"
        app:constraint_referenced_ids="containerResult, contains_result_opinion, filter_icon_opinion, order_opinion, ratedRecyclerView, top_title"
        />
</androidx.constraintlayout.widget.ConstraintLayout>